--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,12 +1,24 @@
 <div class="list">
-    <div class="content">
-        <div class="card" style="width: 18rem;" *ngFor="let item of [1,2,3,4,5,6,7,8,9,9,9,9,9,9,9,9,9,]">
-            <img src="https://images.ygoprodeck.com/images/cards/34541863.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card name</h5>
-              <p class="card-text">Card description</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+  <div class="content">
+    @for (deck of decks$ | async; track $index) {
+    <div class="card" style="width: 18rem">
+      <img [src]="deck.deck[0]" class="card-img-top" [alt]="deck.name" />
+      <div class="card-body">
+        <h5 class="card-title">{{ deck.name }}</h5>
+        <p class="card-text">{{ deck.description }}</p>
+        <a [routerLink]="'/detail/' + deck.id" class="btn btn-primary"
+          >Ver deck</a
+        >
+        <a [routerLink]="'/edit/' + deck.id" class="btn btn-primary">Editar</a>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="deleteDeck(deck.id)"
+        >
+          Eliminar
+        </button>
+      </div>
     </div>
+    }
+  </div>
 </div>
